# $Id$

2006-08-21	Dmitry E. Demidov
	
	* main/Utils/HeaderUtils.class.php: added method sendHttpStatus
	
2006-08-18	Konstantin V. Arkhipov

	* main/Containers/Storable/StorableContainer.class.php: fixed issue
	with lost keys in getIdsList(). Spotted by serge, approved by antony.

2006-08-15	Dmitry E. Demidov

	* core/Form/Primitives/PrimitiveTernary.class.php: ternary primitive 
	can be required

2006-08-11	Konstantin V. Arkhipov

	* core/Cache/SemaphorePool.class.php: now trying to detect and use
	eAccelerator's locking when sysvsem extension is missing.

	* main/DAOs/Handlers/ApcSegmentHandler.class.php: integration with APC
	too.

	* main/DAOs/Handlers/eAcceleratorSegmentHandler.class.php,
	core/Cache/eAcceleratorLocker.class.php: integration with
	eAccelerator.

2006-08-10	Konstantin V. Arkhipov

	* core/Form/FormUtils.class.php: checkPrototyped() added.

	* 0.6.1 released.

2006-08-08	Konstantin V. Arkhipov

	* core/DB/, ext/: 'abstract static' methods are now just 'abstract' to
	be compatible with upcoming php-5.2, wrt to php's bug #38219.

2006-08-08	Dmitry E. Demidov

	* main/Utils/TuringTest/ErrorDrawer.class.php: added ability 
	enable/disable error drawer.

2006-08-04	Dmitry E. Demidov

	* core/OSQL/OrderBy.class.php: added ability group by SelectQuery.

2006-08-03	Dmitry E. Demidov

	* main/Utils/TuringTest/: added classes for Turing test.

2006-08-02	Anton E. Lebedevich

	* main/Mail/Mail.class.php: contentType added.

	* core/Base/Timestamp.class.php: dayDifference() function added.

2006-08-01	Konstantin V. Arkhipov

	* main/Mail/: unfinished mime-mail added.

	* main/Utils/Mail.class.php: moved to new main/Mail category.

2006-07-21	Konstantin V. Arkhipov

	* 0.6.0 released.

2006-07-17	Konstantin V. Arkhipov

	* meta/: DTD updated, forgotten shortcut to identifier implemented.

2006-07-16	Dmitry E. Demidov

	* core/Form/Primitives/PrimitiveTernary.class.php: added.

	* core/Form/Primitive.class.php: ternary() added.
